cmake_minimum_required(VERSION 2.6)
project(RBTree)
set ( CMAKE_BUILD_TYPE DEBUG )
include_directories("${PROJECT_SOURCE_DIR}/include")
include_directories("${PROJECT_SOURCE_DIR}/../List/include")
add_library(RBTree SHARED "${PROJECT_SOURCE_DIR}/src/RBTree.c")
add_library(PList SHARED "${PROJECT_SOURCE_DIR}/../List/src/List.c")
add_executable(RBTreeTest "${PROJECT_SOURCE_DIR}/src/RBTree_Test.c")
target_link_libraries(RBTreeTest RBTree PList)
